<resources>
    <string name="app_name">Projet_Stage_Algorithmics</string>
    <string name="login_title">Login for students</string>
    <string name="login_label">Login:</string>
    <string name="password_label">Password:</string>
    <string name="login_btn">LOGIN</string>
    <string name="sign_in_teacher">Sign in as a teacher</string>
    <string name="menu_main">Main</string>
    <string name="menu_course">Course</string>
    <string name="menu_online">Online lesson</string>
    <string name="menu_community">community</string>
    <string name="menu_laboratory">laboratory</string>
    <string name="next_lesson">NEXT LESSON</string>
    <string name="goals_achievements">Goals and achievements</string>
    <string name="trends">Trends</string>
    <string name="projects">Projects</string>
    <string name="python">Python</string>
    <string name="unit_lesson">UNIT / LESSON</string>
    <string name="current_lesson">current lesson</string>
    <string name="game_label_placeholder">Game 1</string>
    <string name="rating_placeholder">4.5</string>
    <string name="game_thumbnail_desc">Game thumbnail</string>
    <string name="star_desc">star</string>
    <string name="algorithmics">Algorithmics</string>
    <string name="logo">Logo</string>
    <string name="icon1">icon1</string>
    <string name="icon2">icon2</string>
    <string name="icon3">icon3</string>


    <!-- Login -->
    <string name="teacher_login_title">LOGIN</string>
    <string name="hint_email">admin@algorithmics.email</string>
    <string name="hint_password">password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_everything">I forgot everything</string>
    <string name="login_as_student">login as a student</string>
    <!-- Dashboard -->
    <string name="tab_all">All</string>
    <string name="tab_by_group">by Group</string>
    <string name="tab_by_lessons">by Lessons</string>
    <string name="tab_by_students">by Students</string>
    <string name="show_stats">show your stats</string>
    <string name="details_label">Details:</string>
    <string name="pay_structure">Pay structure</string>
    <string name="contact_email">contact email</string>
    <string name="lazy_tuesday">Lazy Tuesday</string>
    <string name="lesson_notes">lesson notes</string>
    <!-- Students -->
    <string name="students_label">Students:</string>
    <string name="student_detail_title">Ahmed ahmed</string>
    <string name="field_id">ID:</string>
    <string name="field_category">category:</string>
    <string name="field_group">Group:</string>
    <string name="field_course">Course:</string>
    <string name="field_description">Description:</string>
    <string name="field_location">Location:</string>
    <string name="login">LOGIN</string>
    <string name="ahmed_ahmed">ahmed ahmed</string>
</resources>
